--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
 Pillow==9.5.0
 streamlit==1.31.0
 ultralytics==8.1.1
+opencv-contrib-python==4.8.1.78
+opencv-python==4.8.0.76
+opencv-python-headless
